# FreePictureSplitter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  FPS.cbp  FPS.layout  FPS.xpm  NOTICES  README.md  SECURITY.md  cppcheck_report.txt  crowdin.yml
.devcontainer/: Dockerfile  devcontainer.json  dockerignore
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yml  cppcheck.yml  linux-ubuntu.yml  macos.yml  packages.yml  release.yml  static-analysis.yml  windows-msys2.yml
cmake/modules/: GenDeployScript.cmake  Qt5GenTranslations.cmake
config/: config.h.in  config.xml  package.xml
docs/: build.md
docs/en/: build.md  usage.md
docs/zh/: build.md  index.md  usage.md
include/: FPSApp.h  FPSMain.h  SplitThread.h  config.h.in  fpsImage.hpp  fpsSplit.h  imagepanel.h  version.h  wx_pch.h
lib/: CMakeLists.txt
lib/tools/: CMakeLists.txt  borderwidget.cpp  borderwidget.h  framelesswidget.cpp  framelesswidget.h  titlebar.cpp  titlebar.h
res/: win_resources.rc  xpmanifest.manifest
res/i18n/: messages.pot
resources/: resource.rc
src/: CMakeLists.txt  FPSApp.cpp  FPSMain.cpp  FreePictureSplitter.cpp  FreePictureSplitter.h  FreePictureSplitterApp.cpp  FreePictureSplitterApp.h  FreePictureSplitterMain.cpp  FreePictureSplitterMain.h  SplitThread.cpp  app.cpp  debugutil.h  fpsImage.cpp  fpsSplit.cpp  fps_pch.h  fpsaboutdialog.cpp  fpsaboutdialog.cpp.in  fpsaboutdialog.h  fpsaverpanel.cpp  fpsaverpanel.h  fpsbatchdialog.cpp  fpsbatchdialog.h  fpscentralwidget.cpp  fpscentralwidget.h  fpsfloatingline.cpp  fpsfloatingline.h  fpsgraphicsview.cpp  fpsgraphicsview.h  fpsimagehandler.cpp  fpsimagehandler.h  fpsmainwindow.cpp  fpsmainwindow.cpp.in  fpsmainwindow.h  fpspixelpanel.cpp  fpspixelpanel.h  fpsprogressdialog.cpp  fpsprogressdialog.h  fpsrulerbar.cpp  fpsrulerbar.h  fpssettingsdialog.cpp  (+7 more)
src/app/: CMakeLists.txt  app_version.h.in  fpsaboutdialog.cpp  fpsaboutdialog.h  fpsbatchdialog.cpp  fpsbatchdialog.h  fpsdraggableline.h  fpsfloatingline.cpp  fpsfloatingline.h  fpsgraphicsview.cpp  fpsgraphicsview.h  fpsimagehandler.cpp  fpsimagehandler.h  fpsmainwindow.cpp  fpsmainwindow.h  fpsprogressdialog.cpp  fpsprogressdialog.h  fpsrulerbar.cpp  fpsrulerbar.h  fpssettingsdialog.cpp  fpssettingsdialog.h  fpssplitworker.cpp  fpssplitworker.h  main.cpp
src/core/: CMakeLists.txt  imagedocument.cpp  imagedocument.h  imagehandler.cpp  imagehandler.h
src/resources/: CMakeLists.txt  about.html  dark-style.qss  fps.qrc  light-style.qss  resources.rc  resources.rc.in
src/resources/i18n/: FreePictureSplitter_de.ts  FreePictureSplitter_fr.ts  FreePictureSplitter_it.ts  FreePictureSplitter_ja.ts  FreePictureSplitter_pl.ts  FreePictureSplitter_ru.ts  FreePictureSplitter_tr.ts  FreePictureSplitter_uk.ts  FreePictureSplitter_zh_CN.ts  FreePictureSplitter_zh_TW.ts
src/resources/skins/: CyberNeonDark.json  DegaultLight.json  ModernDark.json  ModernLight.json  ModernLightPurple.json  default.qss  default.skin  light.json  lightblue.qss  lightblue.skin  medize.qss  medize.skin  qdarkstyle.skin  wordoffice.skin
src/ui/: CMakeLists.txt  batchwidget.ui  errorlogdialog.ui  fpsaverpanel.ui  fpsbatchdialog.ui  fpsbatchwidget.ui  fpscentralwidget.ui  fpsmainwindow.ui  fpspixelpanel.ui  fpspreferenceswidget.ui  fpsprogressdialog.ui  fpssettingsdialog.ui  fpssinglewidget.ui  mainwindow.ui  preferenceswidget.ui  progressdialog.ui  singlewidget.ui
src/utils/: CMakeLists.txt  colors.cpp  colors.h  debugutil.h  fancytabbarstyle.cpp  fancytabbarstyle.h  fileinfo.h  fonts.cpp  fonts.h  globals.h  hoverevent.h  hovereventfilter.h  imagedocument.h  imagehandler.cpp  imagehandler.h  jsonconfigitems.h  languagemanager.cpp  languagemanager.h  leaveevent.h  misc.h  skins.cpp  skins.h  stdpaths.cpp  stdpaths.h  taskmanager.cpp  taskmanager.h  thememanager.cpp  thememanager.h
src/widgets/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  auxtabbutton.h  batchwidget.cpp  batchwidget.h  clickablelabel.cpp  clickablelabel.h  draggableline.cpp  draggableline.h  errorlogdialog.cpp  errorlogdialog.h  fancytabwidget.cpp  fancytabwidget.h  filedialog.h  fpsaboutdialog.cpp  fpsaboutdialog.h  fpsbatchdialog.cpp  fpsbatchdialog.h  fpsbatchwidget.cpp  fpsbatchwidget.h  fpsclickablelabel.cpp  fpsclickablelabel.h  fpsdraggableline.cpp  fpsdraggableline.h  fpsgraphicsview.cpp  fpsgraphicsview.h  fpsmainwindow.cpp  fpsmainwindow.h  fpspreferenceswidget.cpp  fpspreferenceswidget.h  fpsprogressdialog.cpp  fpsprogressdialog.h  fpsrulerbar.cpp  fpsrulerbar.h  fpssettingsdialog.cpp  fpssettingsdialog.h  fpssinglewidget.cpp  fpssinglewidget.h  graphicsview.cpp  (+17 more)
ui/: MainFrame.cpp  MainFrame.hpp  UiBase.cpp  UiBase.hpp  bitmaps.cpp  fpsBatchSplitDialog.cpp  fpsBatchSplitDialog.hpp
wxsmith/: FPSframe.wxs
